tests/lean/bintreeGoal.lean.expected.out
bintreeGoal.lean:53:4-53:18: warning: declaration uses 'sorry'
bintreeGoal.lean:66:26-66:30: error: unsolved goals
case node.inl.node
β : Type u_1
b : BinTree β
k : Nat
v : β
left : Tree β
key : Nat
value : β
right : Tree β
ihl : BST left → Tree.find? (Tree.insert left k v) k = some v
ihr : BST right → Tree.find? (Tree.insert right k v) k = some v
: k < key
: BST left
: ForallTree (fun k v => k < key) left
: BST right
: ForallTree (fun k v => key < k) right
⊢ BST left
bintreeGoal.lean:60:8-60:27: warning: declaration uses 'sorry'
